--- a/style/style.css
+++ b/style/style.css
@@ -84,23 +84,27 @@ main p {
     background-color: var(--color-private);
 }
 
-aside {
+/* aside {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6);
+    transform: translateX(0);
     z-index: 2;
-}
+    transition: all 5000ms;
+} */
 
 .sidebar {
     position: fixed;
     right: 0;
     top: 0;
-    width: 70%;
+    width: 259px;
     height: 100%;
     background-color: #fff;
+    transition: all 500ms;
+    z-index: 2;
 }
 
 .sidebar ion-icon {
@@ -112,7 +116,7 @@ aside {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10% 18%;
+    padding: 10% 16%;
     height: 84px;
 }
 
@@ -170,6 +174,20 @@ ion-icon.check {
     margin: 0 27px 0 17px;
 }
 
+.close-sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+}
+
+.faded {
+    transform: translateX(259px);
+}
+
 footer {
     display: flex;
     align-items: center;
@@ -208,4 +226,8 @@ footer ion-icon {
     width: 26px;
     height: 26px;
     margin-right: 18px;
+}
+
+.isClose {
+    display: none;
 }
