--- a/style/style.css
+++ b/style/style.css
@@ -22,7 +22,7 @@ header {
     justify-content: space-between;
     width: 100%;
     height: 80px;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     background-color: #fff;
@@ -43,6 +43,7 @@ header ion-icon {
 
 main {
     margin-top: 106px;
+    margin-bottom: 85px;
 }
 
 main div {
