--- a/style/style.css
+++ b/style/style.css
@@ -44,6 +44,7 @@ header ion-icon {
 main {
     margin-top: 106px;
     margin-bottom: 85px;
+    max-width: 100vw;
 }
 
 main div {
@@ -55,13 +56,14 @@ main div {
 }
 
 main p {
-    width: 100%;
+    max-width: 100vw;
     margin: 0 9px;
     font-size: 14px;
     line-height: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
     color: #000;
+    word-wrap: break-word;
 }
 
 .hour {
