--- a/style/style.css
+++ b/style/style.css
@@ -16,6 +16,58 @@ strong {
     font-weight: bold;
 }
 
+.login {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.login img {
+    width: 130px;
+    height: 92px;
+    margin-top: 72px;
+    margin-bottom: 94px;
+}
+
+.login input {
+    width: 261px;
+    height: 54px;
+    text-align: center;
+    margin-bottom: 15px;
+    background-color: #fff;
+    border: 1px solid #d7d7d7;
+    border-radius: 4px;
+    font-size: 18px;
+    line-height: 25px;
+    color: #aeaeae;
+}
+
+.login input:focus {
+    outline: 0;
+}
+
+.login ::placeholder {
+    color: #aeaeae;
+}
+
+.login button {
+    width: 109px;
+    height: 45px;
+    font-size: 18px;
+    line-height: 25px;
+    color: #696969;
+    background-color: #e7e7e7;
+    border: none;
+    border-radius: 9px;
+}
+
 header {
     display: flex;
     align-items: center;
@@ -86,18 +138,6 @@ main p {
 .private {
     background-color: var(--color-private);
 }
-
-/* aside {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    transform: translateX(0);
-    z-index: 2;
-    transition: all 5000ms;
-} */
 
 .sidebar {
     position: fixed;
