--- a/style/style.css
+++ b/style/style.css
@@ -157,6 +157,7 @@ main p {
     top: 0;
     width: 259px;
     height: 100%;
+    overflow-y: scroll;
     background-color: #fff;
     transition: all 500ms;
     z-index: 2;
@@ -204,6 +205,7 @@ h1 {
 .info p {
     font-size: 16px;
     line-height: 19px;
+    overflow: hidden;
 }
 
 .check {
@@ -281,11 +283,18 @@ footer input:focus {
     color: #000;
 }
 
+footer p {
+    font-size: 14px;
+    margin-left: 20px;
+    font-weight: 300;
+}
+
 footer ion-icon {
-    width: 26px;
-    height: 26px;
+    width: 28px;
+    height: 28px;
     margin-right: 18px;
     cursor: pointer;
+    line-height: 25px;
 }
 
 .isClose {
