--- a/style/style.css
+++ b/style/style.css
@@ -158,6 +158,7 @@ main p {
     width: 259px;
     height: 100%;
     overflow-y: scroll;
+    overflow-x: hidden;
     background-color: #fff;
     transition: all 500ms;
     z-index: 2;
@@ -192,8 +193,8 @@ h1 {
 }
 
 .info ion-icon {
-    height: 25px;
-    width: 25px;
+    min-height: 25px;
+    min-width: 25px;
     margin-right: 7px;
 }
 
